<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.saifil.power.RegisterActivity">

    <Button
        android:id="@+id/btn_qr_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:text="@string/scan_aadhaar"
        android:textColor="#ffffff"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/aadhaar_num_id"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/layout_btn"
        android:ems="10"
        android:hint="@string/enter_aadhaar_number"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/mob_num_id"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aadhaar_num_id"
        android:layout_alignStart="@+id/aadhaar_num_id"
        android:layout_below="@+id/aadhaar_num_id"
        android:layout_marginTop="28dp"
        android:background="@drawable/layout_btn"
        android:ems="10"
        android:hint="@string/enter_mobile_number"
        android:inputType="phone" />

    <Button
        android:id="@+id/btn_signup_id"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mob_num_id"
        android:layout_alignStart="@+id/mob_num_id"
        android:layout_below="@+id/mob_num_id"
        android:layout_marginTop="28dp"
        android:background="@color/colorPrimary"
        android:text="@string/signup"
        android:textColor="#ffffff"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:text="@string/register"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcoe_txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="18sp" />

</RelativeLayout>
